# TablePro

./: .gitattributes  .gitignore  AGENTS.md  README.md
apps/backend/: README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 202605010001_initial_app_metadata.py  202605090001_local_auth_vault.py  202605130001_connection_management.py  202605130002_schema_introspection.py
apps/backend/src/tablepro_backend/: main.py
apps/backend/src/tablepro_backend/api/: routes.py  schemas.py
apps/backend/src/tablepro_backend/application/services/: auth.py  connections.py  crypto.py  query.py  runtime_status.py  schema.py  vault.py
apps/backend/src/tablepro_backend/core/: config.py  logging.py
apps/backend/src/tablepro_backend/domain/: auth.py  connections.py  query.py  readiness.py  schema.py
apps/backend/src/tablepro_backend/infrastructure/: result_store.py
apps/backend/src/tablepro_backend/infrastructure/database/: connections.py  introspection.py  migrations.py  query.py  (+4 more)
apps/backend/src/tablepro_backend/ports/: connections.py  query.py  result_store.py  schema.py  vault.py
apps/backend/tests/: README.md  conftest.py
apps/backend/tests/api/: test_auth_api.py  test_connections_api.py  test_query_api.py  test_schema_api.py  test_status_api.py
apps/backend/tests/integration/database/: test_migrations.py
apps/backend/tests/integration/vault/: test_vault_service.py
apps/backend/tests/unit/application/: test_connections.py  test_crypto.py  test_query.py  test_schema.py
apps/backend/tests/unit/core/: test_settings.py
(+48 files in other folders)
