[project]
name = "tablepro-backend"
version = "0.1.0"
description = "FastAPI backend spine for TablePro."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.115",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
