[project]
name = "tablepro-backend"
version = "0.1.0"
description = "FastAPI backend spine for TablePro."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13",
    "cryptography>=48.0.1",
    "fastapi>=0.115",
    "psycopg[binary]>=3.2",
    "pydantic-settings>=2.14.2",
    "pymysql>=1.1",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.30",
]

[dependency-groups]
dev = [
    "bandit>=1.8",
    "httpx>=0.27",
    "pip-audit>=2.9",
    "pytest>=8.3",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"
